minaapp.cfn/templates/servers-stack.yml
---
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  InstanceType:
    Description: WebServer EC2 instance type.
    Type: String
    #Default: ''
    AllowedValues:
      - t1.micro
      - t2.nano
      - t2.micro
  vpcid:
    Description: VPC id
    Type: String
    Default: ''

  VPCCIDR:
    Description: VPC CIDR
    Type: String
    Default: ''
  
  PublicSubnetA:
    Description: PublicSubnetA
    Type: String
    Default: ''

  PublicSubnetB:
    Description: PublicSubnetB
    Type: String
    Default: ''
  PrivateSubnetA:
    Description: PrivateSubnetA
    Type: String
    Default: ''
  PrivateSubnetB:
    Description: PrivateSubnetB
    Type: String
    Default: ''

  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.

  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: ''
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instance.
    Type: String
    MinLength: '9'
    MaxLength: '18'
    #Default: ''
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

Resources:
  BastionHost:
    Type: AWS::EC2::Instance  
    Properties:
      InstanceType: !Ref InstanceType
      Tags:
       - Key: "CreatedBy"
         Value: "MinaRoufael"
      KeyName: !Ref KeyName
      SubnetId: !Ref PublicSubnetA
      ImageId: !Ref LatestAmiId
      SecurityGroupIds:
            - !GetAtt "BastionSecurityGroup.GroupId"
  
  WebServerPublic1:
    Type: AWS::EC2::Instance  
    Properties:
      InstanceType: !Ref InstanceType
      Tags:
       - Key: "CreatedBy"
         Value: "MinaRoufael"
      KeyName: !Ref KeyName
      SubnetId: !Ref PublicSubnetA
      ImageId: !Ref LatestAmiId
      SecurityGroupIds:
            - !GetAtt "PublicWebServerSG.GroupId"
      UserData: 
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            sudo yum update -y 
            sudo yum install -y httpd
            sudo systemctl start httpd
            sudo systemctl enable httpd
            echo "Hello Rackers from public webserver 1-FromJenkins-Pipeline" > /var/www/html/index.html
  WebServerPublic2:
    Type: AWS::EC2::Instance  
    Properties:
      InstanceType: !Ref InstanceType
      Tags:
       - Key: "CreatedBy"
         Value: "MinaRoufael"
      KeyName: !Ref KeyName
      SubnetId: !Ref PublicSubnetB
      ImageId: !Ref LatestAmiId
      SecurityGroupIds:
            - !GetAtt "PublicWebServerSG.GroupId"
      UserData: 
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            sudo yum update -y
            sudo yum install httpd -y
            sudo systemctl start httpd
            sudo systemctl enable httpd
            echo "Hello Rackers from public webserver 2" > /var/www/html/index.html
  
  WebServerPrivate1:
    Type: AWS::EC2::Instance  
    Properties:
      InstanceType: !Ref InstanceType
      Tags:
       - Key: "CreatedBy"
         Value: "MinaRoufael"
      KeyName: !Ref KeyName
      SubnetId: !Ref PrivateSubnetA
      ImageId: !Ref LatestAmiId
      SecurityGroupIds:
            - !GetAtt "PrivateWebServerSG.GroupId"
      UserData: 
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            sudo yum update -y
            sudo yum install httpd -y
            sudo systemctl start httpd
            sudo systemctl enable httpd
            echo "Hello Rackers from private webserver 1" > /var/www/html/index.html

  WebServerPrivate2:
    Type: AWS::EC2::Instance  
    Properties:
      InstanceType: !Ref InstanceType
      Tags:
       - Key: "CreatedBy"
         Value: "MinaRoufael"
      KeyName: !Ref KeyName
      SubnetId: !Ref PrivateSubnetB
      ImageId: !Ref LatestAmiId
      SecurityGroupIds:
            - !GetAtt "PrivateWebServerSG.GroupId"
      UserData: 
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            sudo yum update -y
            sudo yum install httpd -y
            sudo systemctl start httpd
            sudo systemctl enable httpd
            echo "Hello Rackers from private webserver 2" > /var/www/html/index.html



  BastionSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH Access port 22.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation
      VpcId: !Ref vpcid
  
  PublicWebServerSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH Access port 22 from VPC CIDR and http from anywhere.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref VPCCIDR
      VpcId: !Ref vpcid

  PrivateWebServerSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: (allow 80, 22 from VPC CIDR)
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref VPCCIDR
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref VPCCIDR
      VpcId: !Ref vpcid

Outputs:
  
  PublicWebServer1IP:
    Description: Public IP of pub web server 1
    Value: !GetAtt WebServerPublic1.PublicIp
    
  PublicWebServer2IP:
    Description: Public IP of pub web server 2
    Value: !GetAtt WebServerPublic2.PublicIp
  
  WebServerPrivate1:
    Description: Private IP of Private web server 1
    Value: !GetAtt WebServerPrivate1.PrivateIp
  
  WebServerPrivate2:
    Description: Private IP of Private web server 2
    Value: !GetAtt WebServerPrivate2.PrivateIp
